# netflix-n-chill

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  recomendaciones.cpp  recomendaciones.h
data/: peliculas.csv  ratings.csv
src/: hashTable.cpp  hashTable.h  main.cpp  peliculas.cpp  peliculas.h  ratings.cpp  ratings.csv  ratings.h  recomendaciones.cpp  recomendaciones.h  usuarios.cpp  usuarios.h
